Fix menu items spacing so it matches the mockups

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -312,44 +312,41 @@ GtkStatusbar {
     border-color: shade (@bg_color, 0.7);
 }
 
-  .menu {
-      padding: 4;
-      background-color: shade (@bg_color, 1.12);
-      border-style: solid;
-      border-width: 1;
-      border-color: shade (@bg_color, 0.7);
-      border-radius: 0; /* No argb visuals by default 0, it would have been nice to have it something like 4*/
-      -GtkMenu-vertical-offset: 50; /* does this actually do something? */
-      -GtkMenu-horizontal-offset: 50; /* does this actually do something? */
-      -GtkMenuItem-arrow-scaling: 0.4;
-  }
+.menu {
+    padding: -1;
+    background-color: shade (@bg_color, 1.12);
+    border-style: solid;
+    border-width: 1;
+    border-color: shade (@bg_color, 0.7);
+    border-radius: 0; /* No argb visuals by default 0, it would have been nice to have it something like 4*/
+    -GtkMenuItem-arrow-scaling: 0.4;
+}
 
-    .menu:active,
-    .menu:prelight {
-        background-image: -gtk-gradient (linear,
-				         left top,
-				         left bottom,
-				         from (shade (@selected_bg_color, 1.3)),
-				         color-stop (0.05, shade (@selected_bg_color, 0.95)),
-				         color-stop (0.4, @selected_bg_color),
-				         to @selected_bg_color);
-        /* background-color: @selected_bg_color; */
-        color: @selected_fg_color;
-        border-style: solid;
-        border-width: 1;
-        border-radius: 0;
-        border-color: darker (@selected_bg_color);
-        margin: -1; /* the border of the selected entry should be on top of the 
-                    border of the menu iteselft, but negative margines don't work */
-    }
+.menu *:active,
+.menu *:prelight {
+    background-image: -gtk-gradient (linear,
+				     left top,
+				     left bottom,
+				     from (shade (@selected_bg_color, 1.3)),
+				     color-stop (0.05, shade (@selected_bg_color, 0.95)),
+				     color-stop (0.4, @selected_bg_color),
+				     to @selected_bg_color);
+    /* background-color: @selected_bg_color; */
+    color: @selected_fg_color;
+    border-style: solid;
+    border-width: 1;
+    border-radius: 0;
+    border-color: darker (@selected_bg_color);
+    padding: 0;
+}
 
-    .menu.separator {
-      padding: 1 0;
-      -GtkSeparatorMenuItem-horizontal-padding: 0;
-      -GtkWidget-wide-separators: 1;
-      -GtkWidget-separator-width: 1;
-      -GtkWidget-separator-height: 7;
-    }
+.menu.separator {
+    padding: 1 0;
+    -GtkSeparatorMenuItem-horizontal-padding: 0;
+    -GtkWidget-wide-separators: 1;
+    -GtkWidget-separator-width: 1;
+    -GtkWidget-separator-height: 7;
+}
 
 .check,
 .radio,
